# fluvio-go

./: .gitignore  Cargo.toml  Makefile  go_api.md  rust_api.md
example/: filter.wasm  main.go  smart_stream.go
fluvio/: fluvio.go  fluvio_error.go  offset.go  topic_producer.go
fluvio/c_interface/: c_interface.go
fluvio/consumer/: consumer.go  consumer_config.go  partition_consumer.go  partition_consumer_stream.go
fluvio/consumer/consumer_config/: consumer_config.go
fluvio/consumer/partition_consumer/: partition_consumer.go
fluvio/consumer/partition_consumer_stream/: partition_consumer_stream.go
fluvio/fluvio_client/: fluvio_client.go  fluvio_client_test.go
fluvio/fluvio_error/: fluvio_error.go
fluvio/offset/: offset.go
fluvio/topic_producer/: topic_producer.go
src/: lib.rs
third_thing/: third_thing.go
