[package]
name = "fluvio-go"
version = "0.1.0"
authors = ["avi <hi@avi.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "fluvio_go"

[dependencies]
libc = "0.2.98"
anyhow = "1.0.38"
fluvio = { version = "0.20.0" }
fluvio-future = { version = "0.5.1", features = ["io"] }
flate2 = { version = "1.0.25" }
fluvio-protocol = { version = "0.10.4" }

[build-dependencies]
cbindgen = "0.20.0"
